# AmotizedDSL

./: DSL.py  README.md  example.py  program_interpreter.py  pyproject.toml  setup.cfg  subroutine_DB.json
.github/workflows/: tests.yml
AmotizedDSL/: DSL.py  README.md  delete_action.py  prog_utils.py  program_interpreter.py
VirtualEnv/: batched_env.py
tests/: test_DSL.py  test_filter_invalid.py  test_prog_utils.py  test_subroutines.py
