[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AmotizedDSL"
version = "0.1"
description = "A DSL for ARC-AGI"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Simon Ouellette"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "setuptools",
    "numpy",
]
[project.urls]
Homepage = "https://github.com/SimonOuellette35/AmotizedDSL"

[tool.setuptools]
packages = ["AmotizedDSL"]
zip-safe = false
